# Resontinex

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  mkdocs.yml  pyproject.toml  requirements.txt  resontinex.config.yaml  resontinex.json
.ci_cache/: ledger_content_hash.txt
.github/workflows/: fusion-budget-gates.yml  fusion-ci.yml  weekly-parameter-tuning.yml
config/: monitoring_dashboard.yaml  overlay_feature_flags.yaml  trust_gate_config.yaml
configs/fusion/: capability_profile.schema.json  drift_policy.yaml  eval_scenarios.yaml  fusion_overlay.v0.3.txt  model_semantics_ledger.v0.1.0.json  overlay_params.json  overlay_params.yaml  slo.yaml  trust_gate.yaml  trust_gate_development.yaml
configs/fusion/micro_overlays/: observability_first.txt  rollback_first.txt  state_model_first.txt
deploy/observability/: docker-compose.yml  prometheus.yml
deploy/observability/dashboards/: resontinex-overview.json
deploy/observability/provisioning/dashboards/: dashboards.yml
docs/: api_reference_guide.md  composite_signal_integration_guide.md  composite_trust_gate_final.md  composite_trust_gate_integration.md  configuration_templates_guide.md  drift_policy_tuning_guide.md  energy_governance_technical_guide.md  governance.md  implementation_validation_report.md  operational_runbook.md  overlay_creation_workflow_guide.md  overview.md  quorum_voting_systems_guide.md  scenario_configuration_guide.md  troubleshooting_guide.md  user_tutorials_guide.md
docs/api/: index.html  resontinex.html  resontinex_governance.html  search.js
docs/api/resontinex_governance/: energy.html  quorum.html
docs/images/: README.md
examples/: README.md  certi-land-workflow.json  golden_scenario.py  n8n-simple-v1.3.json
examples/quickstart/: README.md  quickstart_scenario.json
fusion_ops/: __init__.py  benchmark.py  budget_analysis.py  budget_tripwire.py  feature_flags.py  metrics.py  metrics_controller.py  metrics_validation.py  performance_comparison.py
optimization-results/: parameter-optimization.json
resontinex/: __init__.py  config.py  fusion_resilience.py  plugins.py  resontinex.json  scenario_manager.py
resontinex/core/: __init__.py  composite_signal.py  composite_trust_gate.py
resontinex/obs/: __init__.py  middleware.py
resontinex/runtime/: __init__.py  api.py
resontinex/trust/: __init__.py  composite_trust_gate.py  integration_validation.py
resontinex_governance/: __init__.py  energy.py  quorum.py
scripts/: analyze_budget_metrics.py  benchmark_fusion.py  circuit_breaker.py  collect_configs.py  compare_performance.py  evaluate-fusion.py  fuse-ledger.py  gen_architecture.py  gen_docs.py  judge_fusion.py  release_v0.1.1.sh  rnx.py  runtime_router.py  test-fusion-hardening.py  tune-overlay.py  tune_overlay.py  validate-fusion-ci.py  verify-clean-clone.ps1  verify-clean-clone.sh  watch-drift.py  watch_drift.py
test_results/: comprehensive_test_report.json
tests/: README.md  __init__.py  run_all_tests.py  test_budget_gates.py  test_circuit_breaker.py  test_cross_judge.py  test_drift_detection.py  test_energy_ledger.py  test_golden_framework.py  test_integration.py  test_parameter_tuning.py  test_quorum.py  test_runtime_router.py
tests/core/: test_composite_signal.py  test_composite_trust_gate.py
tests/golden/: golden_test_framework.py  refund_processing_duplicate_golden.json  regulatory_compliance_audit_prep_golden.json  security_incident_containment_golden.json
tests/trust/: __init__.py  test_composite_trust_gate.py
